--- a/packages/ui/styles/globals.css
+++ b/packages/ui/styles/globals.css
@@ -3,6 +3,13 @@
 @tailwind utilities;
 
 
+html {
+  min-height: -webkit-fill-available;
+  display: flex;
+  flex-direction: column;
+}
+
+
 html,
 body {
   padding: 0;
@@ -10,12 +17,14 @@ body {
   overflow-x: hidden;
 }
 
-body,
-#__next {
-  min-height: 100vh;
+body {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 #__next {
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
 }
